<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparente"
        android:gravity="center"
        tools:ignore="UselessParent">


        <LinearLayout
            android:id="@+id/LinearL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_dialogo_config"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cerrar_dialogo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:contentDescription="@string/content"
                android:src="@drawable/cerrar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/dialogo_config_minfondo"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/fredoka_one"
                        android:gravity="center"
                        android:text="@string/dialogo_combinadas"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="27sp"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/dialogo_config_minfondo"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:orientation="horizontal"
                        android:padding="14dp">

                        <ImageButton
                            android:id="@+id/sumas"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#00FFFFFF"
                            android:contentDescription="@string/sums"
                            app:srcCompat="@drawable/btn_sumas" />

                        <ImageButton
                            android:id="@+id/restas"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#00FFFFFF"
                            android:contentDescription="@string/rest"
                            app:srcCompat="@drawable/btn_resta" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:orientation="horizontal"
                        android:padding="14dp">

                        <ImageButton
                            android:id="@+id/multiplicacion"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#00FFFFFF"
                            android:contentDescription="@string/multiplication"
                            app:srcCompat="@drawable/btn_multi" />

                        <ImageButton
                            android:id="@+id/division"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#00FFFFFF"
                            android:contentDescription="@string/division"
                            app:srcCompat="@drawable/btn_div" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/aceptar"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:background="@drawable/btn_lv1"
                        android:fontFamily="@font/fredoka_one"
                        android:text="@string/vale"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>