<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparente"
        android:gravity="center"
        tools:ignore="UselessParent">


        <LinearLayout
            android:id="@+id/LinearL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="60dp"
                    android:background="@drawable/dialogo_config_minfondo"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/fredoka_one"
                        android:gravity="center"
                        android:text="@string/tittle_ads"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/dialogo_config_minfondo"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_margin="7dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ads_description"
                        android:fontFamily="@font/fredoka_one"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:autoSizeTextType="uniform"
                        android:textAlignment="center"
                        />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="25dp">

                <Button
                    android:id="@+id/btn_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/green"
                    android:text="@string/vale"
                    android:textColor="@color/white"
                    android:fontFamily="@font/fredoka_one"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="7dp"
                    android:background="@color/red"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:fontFamily="@font/fredoka_one"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>